Wrong link in Mandelbrot demo

--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -12,7 +12,7 @@
     Масштаб: <input type="text" id="zoom" value="1" oninput="updateZoom(this)"/>
     <button id="koch-inc" type="button">-</button>
     <button id="koch-dec" type="button">+</button><br>
-    <a href="https://brigaccess.github.io/fractaldemo/index.html">Демонстрация алгоритмов</a>
+    <a href="https://brigaccess.github.io/fractaldemo/">Демонстрация алгоритмов</a>
 
     <script src="mandelbrot.js"></script>
     <script>
