initial scale removed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Демонстрация работы алгоритмов построения фракталов</title>
-    <meta name="viewport" content="width=500, initial-scale=1">
+    <meta name="viewport" content="width=500">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
