--- a/mandelbrot.html
+++ b/mandelbrot.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Визуализация множества Мандельброта</title>
-    <meta name="viewport" content="width=500, initial-scale=0.5">
+    <meta name="viewport" content="width=500">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 </head>
 <body>
